--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -108,7 +108,7 @@
            <section class="grid-section">
 
               <h1 class="interested">You may also be interested in the following product(s)</h1>
-              <% @event_show.each do |eventshow| %>
+              <% @relative_show.each do |eventshow| %>
                <% if eventshow.ecategory_id == @event.ecategory_id %> 
                 <article class="related-card">
                   <div class="related-card__image">
