--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -94,7 +94,6 @@
   .card {
     display: flex;
     width: calc(100% - 1.6rem);
-    border-bottom: 1px solid;
     margin-bottom: 1em;
   }
 }
@@ -148,7 +147,7 @@ list-style: none;
   height: 4em;
   vertical-align: middle;
   border: 0;
-  object-fit: cover;
+  object-fit: contain;
 }
 .srtpl-r {
   margin-left: 90px;
@@ -442,6 +441,97 @@ ul.accordian li {
     padding: 20px;
   }
 }
+
+
+/* ---------------------------------------------
+   Products Slider
+ --------------------------------------------- */
+.dis_slider-wrapper {
+  margin: 0;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  -webkit-overflow-scrolling: touch;
+  /* If we don't want horizontal scroll bars 
+  &::-webkit-scrollbar {
+      display: none;
+    }
+  --------- */
+}
+.dis_slider {
+  background-color: white;
+  border: 1px white;
+  min-width: 100%;
+  min-height: 200px;
+  display: flex;
+  overflow-x: auto;
+}
+.dis_slider--content {
+  min-width: 200px;
+  margin: 5px;
+  color: black;
+}
+.dis_slider--content img {
+  width: 100%;
+  height: 190px;
+  padding: 1em;
+  object-fit: contain;
+}
+.dis_slider--bestdeal {
+  min-width: 300px;
+  max-height: 250px;
+  margin: 5px;
+  color: black;
+  -webkit-box-shadow: 0px 5px 20px -1px rgba(203,224,250,1);
+  -moz-box-shadow: 0px 5px 20px -1px rgba(203,224,250,1);
+  box-shadow: 0px 5px 20px -1px rgba(203,224,250,1);
+}
+.dis_slider--bestdeal img {
+  width: 100%;
+  height: 100%;
+}
+.dis_slider--content p {
+  margin: 0 0 0.5em 0;
+  padding: 0 0.5em;
+  height: 3em;
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  display: -webkit-box;
+  -moz-line-clamp: 2; 
+  -webkit-line-clamp: 2; /* number of line */ 
+  -ms-line-clamp: 2;
+  -moz-box-orient: vertical;
+  -webkit-box-orient: vertical;
+  -ms-box-orient: vertical;
+  word-wrap:break-word;
+}
+.dis_slider--content a {
+  color: black;
+}
+.dis_slider--content ul {
+  margin: 0em;
+  color: #08f;
+}
+.dis_slider--content ul li,
+.uk_price ul li,
+.uk_price_show ul li {
+  list-style: none;
+  display: inline-block;
+  margin: 0 0 0 0.5em;
+}
+.dis_slider--content ul li:nth-child(1),
+.uk_price ul li:nth-child(2),
+.uk_price_show ul li:nth-child(2) {
+  text-decoration: line-through;
+}
+.dis_slider--content ul li:nth-child(2) {
+  margin: 0em;
+}
+.dis_daily {
+  margin-bottom: -2em;
+}
+
 
 
 
