--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -92,7 +92,7 @@
            <section class="grid-section">
 
               <h1 class="interested">You may also be interested in the following product(s)</h1>
-              <% @posts_show.each do |postshow| %>
+              <% @relative_show.take(8).each do |postshow| %>
                <% if postshow.category_id == @post.category_id %> 
                 <article class="related-card">
                   <div class="related-card__image">
