--- a/app/views/dealzons/_sidebar_show.html.erb
+++ b/app/views/dealzons/_sidebar_show.html.erb
@@ -77,7 +77,7 @@
         <section>
          <div id="sidebar">
           <ul id="side-rcnt-thumb-post-list">
-            <% @relative_side.each do |dealside| %>
+            <% @dealzon_side.each do |dealside| %>
               <% if dealside.acategory_id ==  %> 
                 <li>
                   <div class="srtpl-l">
