post_index_show

--- a/app/views/dealzons/_navbar.html.erb
+++ b/app/views/dealzons/_navbar.html.erb
@@ -1,7 +1,7 @@
 <!-- Logo -->
 <span class="logo">
   <a href="/">Oh,i gotta buy this</a>
-  <span>Quick way to find the best deals</span>
+  <!-- <span>Quick way to find the best deals</span> -->
 </span>
 
 <!-- Nav -->
