--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -53,7 +53,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   padding: 0.5em;
 }
 .card--content {
@@ -297,8 +297,8 @@ ul.accordian li {
 .related-card__image img {
   width: 100%;
   height: 150px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
   opacity: 0.8;
 }
 @media screen and (max-width: 1275px) {
