--- a/app/views/posts/_sidebar.html.erb
+++ b/app/views/posts/_sidebar.html.erb
@@ -25,7 +25,7 @@
   </section>
 
   <section>
-   <h3>POPULAR DEALS</h3>
+   <h3>POPULAR GADGETS</h3>
    <div id="sidebar">
     <ul id="side-rcnt-thumb-post-list">
       <% @post_side.each do |ps| %>
