--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -35,7 +35,13 @@
               <% else %>
                 <ul>
                   <li class="show_price_is">$<%= @post.post_price_is %></li>
-                  <li class="show_price_was">$<%= @post.post_price_was %></li>
+                  <% if @post.post_price_was.present? %>
+                   <li class="show_price_was">$<%= @post.post_price_was %></li>
+                  <% end %>
+                  <% if @post.post_spare_02.present? %>
+                   <div class="somthing_hidden"><%= @post.post_spare_02 %></div>
+                   <li>+ free shipping</li>
+                  <% end %>
                 </ul>
               <% end %>
               <hr>
@@ -48,12 +54,16 @@
                     </div>
                    </li>
                   <% end %>
-                  <% if @post.post_review %>
+
+                  <% if @post.post_review.present? %>
                    <li><a class="button small" href="<%= @post.post_review %>"><i class="fa fa-check-circle"></i>&nbsp;See Review</a></li>
                   <% end %>
+
                 </ul>
               </div>
+
               <hr>
+
               <div class="contents">
                 <p class="post_index">What is this?</p>
                 <%= @post.post_intro %>
@@ -112,7 +122,9 @@
                      <span class="related-card__details--like">Crowdfunding</span>
                     <% else %>
                      <span class="related-card__details--like">$<%= postshow.post_price_is %></span>
-                     <span class="related-card__details--view">$<%= postshow.post_price_was %></i></span>        
+                     <% if postshow.post_price_was.present? %>
+                      <span class="related-card__details--view">$<%= postshow.post_price_was %></i></span>
+                     <% end %>
                     <% end %>
                   </div>
                 </article>
