--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -10,7 +10,6 @@
 
      <%= simple_form_for @post do |f| %>
        <div class="form_section">
-        <h1>Edit Gadget</h1>
          <%= f.collection_select :category_id, Category.all, :id, :name, {prompt: "Choose a category"} %>
          <%= f.input :post_title %>
          <%= f.input :post_image %>
@@ -18,8 +17,9 @@
          <%= f.input :post_intro %>
          <%= f.input :post_spare_21, as: :text, input_html: { class: 'ckeditor' }, label: "Description" %>
          <%= f.input :post_price_is %>
-         <%= f.input :post_price_was %>
+         <%= f.select :post_spare_02, ([["No! It's not Free Shipping", ""], "Yes! It's Free Shipping"]) %>
          <%= f.select :post_spare_01, ([["No! It's not Crowdfunding", ""], "Yes! It's Crowdfunding"]) %>
+         <%= f.input :post_price_was %>
          <%= f.input :post_source %>
          <%= f.input :post_youtube_01 %>
          <%= f.input :post_youtube_02 %>
@@ -28,7 +28,7 @@
           <%= f.button :submit %>
          </div>
        </div>
-     <% end %>
+      <% end %>
     </section><!-- /.main -->
 
 </div><!-- /.warpper -->
