--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
         </section>
 
         <div class="index_container">
-                  
+          <h4><%= link_to "Add New Gadgets", new_post_path %></h4>
           <div class="grid">
 
             <% @posts.each do |post| %>
@@ -42,7 +42,7 @@
                   <% end %>
                   
                   <div class="index_button">
-                   <a class="button fit" href="posts/<%= post.id %>">See More Detail</a>
+                   <a class="button fit" target="_blank" href="<%= post.post_link %>">Check it Out</a>
                    <!-- <a class="button primary fit" href="posts/<%= post.id %>">See More Detail</a> -->
                   </div>
                 </div>          
