--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -153,7 +153,7 @@
     </section><!--/.main-->
 
   <!-- Sidebar -->
-  <%= render 'posts/sidebar' %>  
+  <%= render 'posts/sidebar_show' %>  
 
 </div>
 
