--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -20,6 +20,7 @@
          <%= f.input :post_price_is %>
          <%= f.select :post_spare_02, ([["No! It's not Free Shipping", ""], "Yes! It's Free Shipping"]) %>
          <%= f.select :post_spare_01, ([["No! It's not Crowdfunding", ""], "Yes! It's Crowdfunding"]) %>
+         <%= f.select :post_spare_03, ([["No price???", ""], "Yes!"]) %>
          <%= f.input :post_price_was %>
          <%= f.input :post_source %>
          <%= f.input :post_youtube_01 %>
