--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -152,7 +152,8 @@ list-style: none;
 .srtpl-r {
   margin-left: 90px;
 }
-.srtpl-r p {
+.srtpl-r p,
+.show_category {
   margin: 0em;
   font-size: 0.8em;
   color: #999;
@@ -297,8 +298,8 @@ ul.accordian li {
 .related-card__image img {
   width: 100%;
   height: 150px;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
   opacity: 0.8;
 }
 @media screen and (max-width: 1275px) {
