--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -33,6 +33,9 @@
                 <li class="show_crowdfunding">#crowdfunding.</li>
                </ul>
               <% else %>
+               <% if @post.post_spare_04.present? %>
+                <div class="somthing_hidden"><%= @post.post_spare_04 %></div> 
+               <% else %>
                 <ul>
                   <li class="show_price_is">$<%= @post.post_price_is %></li>
                   <% if @post.post_price_was.present? %>
@@ -43,6 +46,7 @@
                    <li>+ free shipping</li>
                   <% end %>
                 </ul>
+               <% end %>
               <% end %>
               <hr>
               <div class="youtube">
@@ -67,6 +71,16 @@
               <div class="contents">
                 <p class="post_index">What is this?</p>
                 <%= @post.post_intro %>
+                
+                <% if @post.post_spare_01.present? %>
+                  <div class="somthing_hidden"><%= @post.post_spare_01 %></div>
+                <% else %>
+                  <p><%= @post.post_title %> is now on sale for <%= @post.post_price_is %> at <%= @post.post_source %></p>
+                  <% if @post.post_spare_02.present? %>
+                   <div class="somthing_hidden"><%= @post.post_spare_02 %></div>
+                   <p>Shpping is free( Prime or on $25+ orders.)</p>
+                  <% end %>
+                <% end %>
 
                 <div class="ckeditor">
                  <%= raw @post.post_spare_21 %>
@@ -113,6 +127,7 @@
                     <%= link_to (image_tag postshow.post_image), postshow %>
                   </div>
                   <div class="related-card__title">
+                    <p class="show_category"><%= postshow.category.name %></p>
                     <p><%= link_to postshow.post_title, postshow %></p>
                   </div>
 
@@ -168,14 +183,14 @@
               <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
             </div><br>
           </section>
-          
+
          </section>
         </div>
 
     </section><!--/.main-->
 
   <!-- Sidebar -->
-  <%= render 'posts/sidebar_show' %>  
+  <%= render 'posts/sidebar' %>  
 
 </div>
 
