--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -74,6 +74,7 @@
                 
                 <% if @post.post_spare_01.present? %>
                   <div class="somthing_hidden"><%= @post.post_spare_01 %></div>
+                  fdasfdsafdsfadsfdas
                 <% else %>
                   <p><%= @post.post_title %> is now on sale for <%= @post.post_price_is %> at <%= @post.post_source %></p>
                   <% if @post.post_spare_02.present? %>
