--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -45,10 +45,7 @@
   margin: 0 0 0 0;
   padding-left: 0em;
 }
-.show_right ul li:nth-child(1),
-.show_right ul li:nth-child(2), 
-.youtube ul li:nth-child(1),
-.youtube ul li:nth-child(2) {
+.show_right ul li, .youtube ul li {
   display: inline-block;
   list-style: none;
   padding-left: 0em;   
@@ -99,7 +96,6 @@
 .ckeditor {
   margin-top: 2em;
 }
-
 .amazon_related {  
   padding: 0.5em;
 }
