--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -99,6 +99,9 @@
 .amazon_related {  
   padding: 0.5em;
 }
+.wia {
+  color: #08f;
+}
 /* ---------------------------------------------
    From Page
  --------------------------------------------- */
