--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -27,7 +27,7 @@
       </div>
       <div class="description">
         <h1 class="blog_title"><%= blog.blog_title %></h1>
-        <h2>Opening a door to the future</h2>
+        <!-- <h2>Opening a door to the future</h2> -->
         <p><%= blog.blog_intro %></p>
         <p class="read-more"><a href="/blogs/<%= blog.id %>">Read More</a></p>
       </div>
