--- a/app/views/dealzons/show.html.erb
+++ b/app/views/dealzons/show.html.erb
@@ -79,9 +79,8 @@
              <p><span class="show_bold"><%= @dealzon.am_title %></span> is on sale now for <span class="show_bold">$<%= @dealzon.am_price_is %></span> at Amazon. If you use this promo code(<span class="show_bold"><%= @dealzon.am_code %></span>), you could save <span class="show_bold"><%= @dealzon.am_price_sale %>% off</span> more.</p>
              <% if @dealzon.am_shipping.present? %>
               <div class="somthing_hidden"><%= @dealzon.am_shipping %></div>
-              <p><span class="show_bold">Shipping is free</span> ( Prime or $25+ of all other eligible items.)
+              <p><span class="show_bold">Shipping is free</span> ( Prime or $25+ of all other eligible items.)<br/><a href="/blogs/1"><span class="wia">What is Amazon Prime?</span></a></p>
              <% end %>
-             </p><br/>
             <% else %>
              <% if @dealzon.acategory_id == 1 %> 
              
@@ -149,7 +148,7 @@
        <section class="grid-section">
 
           <h1 class="interested">You may also be interested in the following product(s)</h1>
-          <% @relative_show.take(8).each do |dealshow| %>
+          <% @relative_show.shuffle.take(8).each do |dealshow| %>
            <% if dealshow.acategory_id == @dealzon.acategory_id %> 
 
             <article class="related-card">
