--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -72,6 +72,7 @@
                 <p class="post_index">What is this?</p>
                 <%= @post.post_intro %>
                 
+             <!--- have to fix --->   
                 <% if @post.post_spare_01.present? %>
                   <div class="somthing_hidden"><%= @post.post_spare_01 %></div>
                   fdasfdsafdsfadsfdas
@@ -79,7 +80,7 @@
                   <p><%= @post.post_title %> is now on sale for <%= @post.post_price_is %> at <%= @post.post_source %></p>
                   <% if @post.post_spare_02.present? %>
                    <div class="somthing_hidden"><%= @post.post_spare_02 %></div>
-                   <p>Shpping is free( Prime or on $25+ orders.)</p>
+                   <p>Shpping is free( Prime or on $25+ orders.) <a href="/blogs/1"><span class="wia">What is Amazon Prime?</span></a></p>
                   <% end %>
                 <% end %>
 
