--- a/app/views/dealzons/_navbar.html.erb
+++ b/app/views/dealzons/_navbar.html.erb
@@ -31,7 +31,7 @@
             <% end %>            
           </ul>
          </li>
-         <li><%= link_to "eBay", events_path %></li>
+         <!-- <li><%= link_to "eBay", events_path %></li> -->
 
       </ul>
     </li>
