--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -5,8 +5,8 @@
 <div class="index_header">
  <h1>All about the Amazon Shopping</h1>
 </div>
-<!-- 
-<div class="wrapper">
+
+<!-- <div class="wrapper">
  <section class="main">
 
   <div class="dis_slider-wrapper">
