--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -23,7 +23,7 @@
       <a href="#" class="icon fa-angle-down">Deals</a>
       <ul>
        <li><%= link_to "Amazon", dealzons_path %></li>
-       <li><%= link_to "eBay", events_path %></li>
+       <!-- <li><%= link_to "eBay", events_path %></li> -->
       </ul>
     </li>
 
