--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -1,3 +1,18 @@
+/* ---------------------------------------------
+   On Old verson's webpage
+ --------------------------------------------- */
+ .old-ver {
+   width: 60%;
+   margin: 0 auto;
+   text-align: center;
+ }
+ .old-ver img {
+   width: 100%;
+ }
+ .keepfind {
+   color: #08f;
+   font-weight: bold;
+ }
 
 /* ---------------------------------------------
    Responsive Product Cards
