--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -124,7 +124,7 @@
     position: absolute;
     width: 100%;
     /* height: 17em; */
-    object-fit: contain;
+    object-fit: cover;
 
   }
 }
@@ -192,7 +192,7 @@ list-style: none;
      margin-top: 2em;
    }
    .card--image img {
-     object-fit: contain;
+     object-fit: cover;
    }
  }
 
