--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -46,8 +46,8 @@
   /* width: calc(33.3% - 1.6rem); */
   /* width: calc(25% - 1.6rem); */
   /* margin: 0.8rem; */
-  width: calc(27% - 1.6rem);
-  margin: 0.3rem;
+  width: calc(26% - 1.6rem);
+  margin: 1%;
   background: #fff;
   overflow: hidden;
   border-radius: .5rem;
