--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -89,7 +89,7 @@
                 </div>
               <% end %>
               <hr>
-        
+             
               <% if @post.post_spare_01.present? %>
                <div class="somthing_hidden"><%= @post.post_spare_01 %></div>
                <div class="check_boutton">
@@ -186,6 +186,9 @@
 </div>
 
 
+  <!-- ShareThis Begin -->
+  <!-- <div class="sharethis-inline-share-buttons"></div><script async src="//platform-api.sharethis.com/js/sharethis.js#property=5bcaf6e3e0bd05001110552d&product="inline-share-buttons"></script> -->
+  <!-- ShareThis End -->
 
 
 <!-- Footer -->
