--- a/app/assets/stylesheets/dealzons.scss
+++ b/app/assets/stylesheets/dealzons.scss
@@ -5,7 +5,6 @@
 /* ---------------------------------------------
    Index Page
  --------------------------------------------- */
-
 /*
 .dealzon_card {
   width: calc(25% - 1.6rem);
@@ -184,5 +183,7 @@
   font-size: 1.2em;
   font-weight: bold;
 }
-
+.ifyousave {
+  color: #08f;
+}
 
