--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -66,7 +66,7 @@
 
                 <% if deal.acategory_id == 2 %> 
                  <div class="card--category category_green"><%= deal.acategory.name %></div>
-                 <div class="category_sale"> you can save <span class="deal_index"><%= deal.am_price_sale %>%off</span></div>
+                 <div class="category_sale"> you can save <span class="deal_index"><%= deal.am_price_sale %>% off</span></div>
                 <% end %>
 
                 <% if deal.acategory_id == 3 %> 
@@ -83,7 +83,7 @@
                   <div class="somthing_hidden"><%= deal.am_expire %></div>
                   <div class="category_sale_expired">This code has expired.</div>
                  <% else %>
-                  <div class="category_sale"> you can save <span class="code_index"><%= deal.am_price_sale %>%off more</span></div>
+                  <div class="category_sale"> you can save more<span class="code_index"><%= deal.am_price_sale %>% off</span></div>
                  <% end %>
                 <% end %>
 
