--- a/app/views/dealzons/edit.html.erb
+++ b/app/views/dealzons/edit.html.erb
@@ -21,6 +21,7 @@
 
        <%= f.input :am_spare_21, as: :text, input_html: { class: 'ckeditor' }, label: "Description" %>
        <%= f.input :am_link %>
+       <%= f.input :am_spare_01 %>
        <br/>
        <%= f.button :submit %>
      </div>
